# projeto-pspd

./: LICENSE  README.md  baseline_simple_stats.csv  baseline_simple_stats_history.csv  cenario_base_failures.csv  cenario_base_stats.csv  cenario_base_stats_history.csv  deploy-full.sh  deploy.sh  deploy2.sh  locustfile.py  monitorar.sh  package-lock.json  stress.sh  teste.sh
BD/quiz/: fisico.sql  popula.sql
BD/user/: fisico.sql  popula.sql
front/: package-lock.json  package.json
front/public/: index.html
front/src/: App.test.js  Cadastro.js  Home.css  Home.js  Login.css  Login.js  Quiz.css  Quiz.js  QuizCRUD.css  QuizCRUD.js  Ranking.css  Ranking.js  index.js  routes.js
front/src/clientgRPC/: serverB.js  user.proto
kubernetes/: 01-db-quiz-deployment.yaml  02-db-user-deployment.yaml  03-app-quiz-deployment.yaml  04-app-user-deployment.yaml  webserver-app.yaml
serverA/: CMakeLists.txt  Dockerfile  client.js  docker-compose.yml  package-lock.json  package.json  quiz.pb.h  quiz.proto  server.cc
serverB/: CMakeLists.txt  Dockerfile  docker-compose.yml  server.cpp  user.grpc.pb.h  user.pb.cc
webserver/: Dockerfile  package-lock.json  package.json  server.js
